# lli

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  rebar.config
.github/workflows/: main.yml  release.yaml
c_src/: lli_nif.c
src/: lli.app.src  lli.erl  lli_nif.erl
test/: lli_test.erl
